# android-deob

./: .gitignore  README.md  prepare_dynamic_classes.sh  prepare_native.sh  run.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/obfuscate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/: Obfuscate.java
app/src/main/java/com/example/device/: DeviceInfo.java  DeviceInfoCollector.java
app/src/main/java/com/example/obfuscate/: AppInstallIdProvider.java  DynamicLoaderOriginal.java  DynamicLoaderV1.java  EndpointClient.kt  MainActivity.kt
app/src/main/java/uniffi/obfuscate/: obfuscate.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/obfuscate/: EndpointClientTest.kt  ExampleUnitTest.kt
doc/: Obfuscator.drawio.xml
docker/: Dockerfile  build_native.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
obfuscate-rs/: Cargo.toml  build.rs
obfuscate-rs/obfuscate/: Cargo.toml  build.rs
obfuscate-rs/obfuscate-core/: Cargo.toml
obfuscate-rs/obfuscate-core/src/: lib.rs
obfuscate-rs/obfuscate-tools/: Cargo.toml
obfuscate-rs/obfuscate/src/: lib.rs  obfuscate.udl  security.rs
obfuscate-rs/obfuscate/src/kotlin/uniffi/obfuscate/: obfuscate.kt
obfuscate-rs/obfuscate/src/swift/uniffi/obfuscate/: obfuscate.swift  obfuscateFFI.h  obfuscateFFI.modulemap
obfuscate-rs/src/: lib.rs  obfuscate.udl
peer-info-server/: Cargo.toml  README.md
peer-info-server/src/: main.rs
tools/bpftrace/: trace_native_load.bt
tools/frida/: java_hook.js  native_hook.js  native_hook_arm64.js  native_jni_arm64.js  test-api.js
tools/qemu/arm64/: cloud-init.yaml  launch_ubuntu25.sh  prepare.sh
