[workspace]
resolver = "2"

members = [
    "obfuscate-core",
    "obfuscate",
    "obfuscate-tools",
]

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"
version = "0.0.1"


[workspace.dependencies]
clap = {  version = "4.5" }
jni = { git = "https://github.com/jni-rs/jni-rs.git", rev = "65471d8cdccf3e7fd937131da873cf3b6090282a" }
uniffi = {  version = "0.29" }
obfuscate-core = { path = "obfuscate-core"}
obfuscate = { path = "obfuscate"}
