[package]
name = "obfuscate"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }


[lib]
crate-type = ["cdylib"]  # Android needs a .so

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
jni = {  workspace = true }
uniffi = { workspace = true, features = ["cli"]}
obfuscate-core = { workspace = true}

[build-dependencies]
uniffi = {  workspace = true, features = ["build"]}

[dev-dependencies]
jni = {  workspace = true }
